--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
     "mysql2": "^3.5.2",
+    "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
