--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
