give access for front to login from back

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -70,7 +70,12 @@
             },
             "development": {
               "browserTarget": "frontend:build:development"
-            }
+            } ,
+
+          },
+          "options": {
+            "proxyConfig" :"src/proxy.conf.json"
+
           },
           "defaultConfiguration": "development"
         },
