--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.1.3",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.1.2",
+    "@nestjs/platform-express": "^10.1.3",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "mysql2": "^3.5.2",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.6.0",
